--- a/src/AureliaMovies/package.json
+++ b/src/AureliaMovies/package.json
@@ -7,7 +7,8 @@
     },
     "dependencies": {
       "aurelia-bootstrapper": "github:aurelia/bootstrapper@^0.10.0",
-      "aurelia-framework": "github:aurelia/framework@^0.9.0"
+      "aurelia-framework": "github:aurelia/framework@^0.9.0",
+      "bootstrap": "github:twbs/bootstrap@^3.3.4"
     }
   }
 }
