--- a/src/AureliaMovies/package.json
+++ b/src/AureliaMovies/package.json
@@ -2,13 +2,16 @@
   "jspm": {
     "directories": {
       "baseURL": "wwwroot",
-      "lib": ".",
-      "packages": "wwwroot\\jspm_packages"
+      "lib": "."
     },
     "dependencies": {
       "aurelia-bootstrapper": "github:aurelia/bootstrapper@^0.10.0",
       "aurelia-framework": "github:aurelia/framework@^0.9.0",
       "bootstrap": "github:twbs/bootstrap@^3.3.4"
+    },
+    "devDependencies": {
+      "babel": "npm:babel@^4.7.16",
+      "babel-runtime": "npm:babel-runtime@^4.7.16"
     }
   }
 }
