--- a/src/AureliaMovies/project.json
+++ b/src/AureliaMovies/project.json
@@ -2,16 +2,17 @@
     "webroot": "wwwroot",
     "version": "1.0.0-*",
     "dependencies": {
-        "Microsoft.AspNet.Server.IIS": "1.0.0-beta3"
+        "Microsoft.AspNet.Loader.IIS": "1.0.0-beta4",
+        "Microsoft.AspNet.Loader.IIS.Interop": "1.0.0-beta4"
     },
     "frameworks": {
-        "aspnet50": { },
-        "aspnetcore50": { }
+        "dnx451": { },
+        "dnxcore50": { }
     },
     "bundleExclude": [
         "node_modules",
         "bower_components",
-        "**.kproj",
+        "**.xproj",
         "**.user",
         "**.vspscc"
     ],
