--- a/src/AureliaMovies/project.json
+++ b/src/AureliaMovies/project.json
@@ -4,7 +4,8 @@
     "dependencies": {
         "Microsoft.AspNet.Loader.IIS": "1.0.0-beta4-11316",
         "Microsoft.AspNet.Loader.IIS.Interop": "1.0.0-beta4-11316",
-        "Microsoft.AspNet.Mvc": "6.0.0-beta4-13141"
+        "Microsoft.AspNet.Mvc": "6.0.0-beta4-13141",
+        "Microsoft.AspNet.StaticFiles": "1.0.0-beta4-11540"
     },
     "frameworks": {
         "dnx451": { },
