--- a/src/AureliaMovies/package.json
+++ b/src/AureliaMovies/package.json
@@ -5,13 +5,14 @@
       "lib": "."
     },
     "dependencies": {
-      "aurelia-bootstrapper": "github:aurelia/bootstrapper@^0.10.0",
-      "aurelia-framework": "github:aurelia/framework@^0.9.0",
+      "aurelia-bootstrapper": "github:aurelia/bootstrapper@^0.11.0",
+      "aurelia-framework": "github:aurelia/framework@^0.10.0",
+      "aurelia-http-client": "github:aurelia/http-client@^0.7.0",
       "bootstrap": "github:twbs/bootstrap@^3.3.4"
     },
     "devDependencies": {
-      "babel": "npm:babel@^4.7.16",
-      "babel-runtime": "npm:babel-runtime@^4.7.16"
+      "babel": "npm:babel@^5.1.1",
+      "babel-runtime": "npm:babel-runtime@^5.1.1"
     }
   }
 }
