--- a/src/AureliaMovies/package.json
+++ b/src/AureliaMovies/package.json
@@ -8,6 +8,7 @@
       "aurelia-bootstrapper": "github:aurelia/bootstrapper@^0.11.0",
       "aurelia-framework": "github:aurelia/framework@^0.10.0",
       "aurelia-http-client": "github:aurelia/http-client@^0.7.0",
+      "aurelia-router": "github:aurelia/router@^0.7.2",
       "bootstrap": "github:twbs/bootstrap@^3.3.4"
     },
     "devDependencies": {
