--- a/src/AureliaMovies/package.json
+++ b/src/AureliaMovies/package.json
@@ -12,8 +12,11 @@
       "bootstrap": "github:twbs/bootstrap@^3.3.4"
     },
     "devDependencies": {
-      "babel": "npm:babel@^5.1.1",
-      "babel-runtime": "npm:babel-runtime@^5.1.1"
+      "babel": "npm:babel-core@^5.1.11",
+      "babel-runtime": "npm:babel-runtime@^5.1.11",
+      "core-js": "npm:core-js@^0.8.4",
+      "traceur": "github:jmcriffey/bower-traceur@0.0.88",
+      "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.88"
     }
   }
 }
