--- a/src/AureliaMovies/package.json
+++ b/src/AureliaMovies/package.json
@@ -5,18 +5,16 @@
       "lib": "."
     },
     "dependencies": {
-      "aurelia-bootstrapper": "github:aurelia/bootstrapper@^0.11.0",
-      "aurelia-framework": "github:aurelia/framework@^0.10.0",
-      "aurelia-http-client": "github:aurelia/http-client@^0.7.0",
-      "aurelia-router": "github:aurelia/router@^0.7.2",
+      "aurelia-bootstrapper": "github:aurelia/bootstrapper@^0.12.0",
+      "aurelia-framework": "github:aurelia/framework@^0.11.0",
+      "aurelia-http-client": "github:aurelia/http-client@^0.8.0",
+      "aurelia-router": "github:aurelia/router@^0.8.0",
       "bootstrap": "github:twbs/bootstrap@^3.3.4"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.1.11",
       "babel-runtime": "npm:babel-runtime@^5.1.11",
-      "core-js": "npm:core-js@^0.8.4",
-      "traceur": "github:jmcriffey/bower-traceur@0.0.88",
-      "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.88"
+      "core-js": "npm:core-js@^0.8.4"
     }
   }
 }
