--- a/src/AureliaMovies/package.json
+++ b/src/AureliaMovies/package.json
@@ -9,6 +9,7 @@
       "aurelia-framework": "github:aurelia/framework@^0.11.0",
       "aurelia-http-client": "github:aurelia/http-client@^0.8.0",
       "aurelia-router": "github:aurelia/router@^0.8.0",
+      "aurelia-validation": "github:aurelia/validation@^0.2.4",
       "bootstrap": "github:twbs/bootstrap@^3.3.4"
     },
     "devDependencies": {
