--- a/src/AureliaMovies/project.json
+++ b/src/AureliaMovies/project.json
@@ -1,32 +1,33 @@
 ﻿{
-    "webroot": "wwwroot",
-    "version": "1.0.0-*",
-    "dependencies": {
-        "Microsoft.AspNet.Loader.IIS": "1.0.0-beta4",
-        "Microsoft.AspNet.Loader.IIS.Interop": "1.0.0-beta4",
-        "Microsoft.AspNet.Mvc": "6.0.0-beta4",
-        "Microsoft.AspNet.StaticFiles": "1.0.0-beta4",
-        "EntityFramework.SqlServer": "7.0.0-beta4",
-        "EntityFramework.Commands": "7.0.0-beta4",
-        "Microsoft.Framework.ConfigurationModel.Json": "1.0.0-beta4"
-    },
-    "frameworks": {
-        "dnx451": { },
-        "dnxcore50": { }
-    },
-    "commands": {
-        "ef": "EntityFramework.Commands"
-    },
-    "publishExclude": [
-        "node_modules",
-        "bower_components",
-        "**.xproj",
-        "**.user",
-        "**.vspscc"
-    ],
-    "exclude": [
-        "wwwroot",
-        "node_modules",
-        "bower_components"
-    ]
+  "webroot": "wwwroot",
+  "version": "1.0.0-*",
+  "dependencies": {
+    "Microsoft.AspNet.Loader.IIS": "1.0.0-beta4",
+    "Microsoft.AspNet.Loader.IIS.Interop": "1.0.0-beta4",
+    "Microsoft.AspNet.Mvc": "6.0.0-beta4",
+    "Microsoft.AspNet.StaticFiles": "1.0.0-beta4",
+    "EntityFramework.SqlServer": "7.0.0-beta4",
+    "EntityFramework.Commands": "7.0.0-beta4",
+    "Microsoft.Framework.ConfigurationModel.Json": "1.0.0-beta4",
+    "Microsoft.AspNet.Diagnostics": "1.0.0-beta4"
+  },
+  "frameworks": {
+    "dnx451": { },
+    "dnxcore50": { }
+  },
+  "commands": {
+    "ef": "EntityFramework.Commands"
+  },
+  "publishExclude": [
+    "node_modules",
+    "bower_components",
+    "**.xproj",
+    "**.user",
+    "**.vspscc"
+  ],
+  "exclude": [
+    "wwwroot",
+    "node_modules",
+    "bower_components"
+  ]
 }
