--- a/src/AureliaMovies/package.json
+++ b/src/AureliaMovies/package.json
@@ -10,12 +10,13 @@
       "aurelia-http-client": "github:aurelia/http-client@^0.8.0",
       "aurelia-router": "github:aurelia/router@^0.8.0",
       "aurelia-validation": "github:aurelia/validation@^0.2.4",
-      "bootstrap": "github:twbs/bootstrap@^3.3.4"
+      "bootstrap": "github:twbs/bootstrap@^3.3.4",
+      "font-awesome": "npm:font-awesome@^4.3.0"
     },
     "devDependencies": {
-      "babel": "npm:babel-core@^5.1.11",
-      "babel-runtime": "npm:babel-runtime@^5.1.11",
-      "core-js": "npm:core-js@^0.8.4"
+      "babel": "npm:babel-core@^5.1.13",
+      "babel-runtime": "npm:babel-runtime@^5.1.13",
+      "core-js": "npm:core-js@^0.9.4"
     }
   }
 }
