--- a/src/AureliaMovies/package.json
+++ b/src/AureliaMovies/package.json
@@ -22,6 +22,11 @@
     }
   },
   "devDependencies": {
-    "aurelia-cli": "^0.2.0"
+    "aurelia-cli": "^0.2.0",
+    "gulp": "^3.9.0",
+    "gulp-exec": "^2.1.1",
+    "gulp-shell": "^0.4.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-watch": "^4.2.4"
   }
 }
