updated to 1.0.0-beta7 release

--- a/src/AureliaMovies/project.json
+++ b/src/AureliaMovies/project.json
@@ -2,14 +2,14 @@
   "webroot": "wwwroot",
   "version": "1.0.0-*",
   "dependencies": {
-    "Microsoft.AspNet.Loader.IIS": "1.0.0-beta4",
-    "Microsoft.AspNet.Loader.IIS.Interop": "1.0.0-beta4",
-    "Microsoft.AspNet.Mvc": "6.0.0-beta4",
-    "Microsoft.AspNet.StaticFiles": "1.0.0-beta4",
-    "EntityFramework.SqlServer": "7.0.0-beta4",
-    "EntityFramework.Commands": "7.0.0-beta4",
-    "Microsoft.Framework.ConfigurationModel.Json": "1.0.0-beta4",
-    "Microsoft.AspNet.Diagnostics": "1.0.0-beta4"
+    "Microsoft.AspNet.Server.IIS": "1.0.0-beta7",
+    "Microsoft.AspNet.Mvc": "6.0.0-beta7",
+    "Microsoft.AspNet.StaticFiles": "1.0.0-beta7",
+    "EntityFramework.SqlServer": "7.0.0-beta7",
+    "EntityFramework.Commands": "7.0.0-beta7",
+    "Microsoft.AspNet.Diagnostics": "1.0.0-beta7",
+    "Microsoft.Framework.Configuration.Json": "1.0.0-beta7",
+     "Microsoft.Framework.Configuration.Abstractions": "1.0.0-beta7"
   },
   "frameworks": {
     "dnx451": { },
