--- a/src/AureliaMovies/package.json
+++ b/src/AureliaMovies/package.json
@@ -5,20 +5,18 @@
       "lib": "."
     },
     "dependencies": {
-      "aurelia-bootstrapper": "github:aurelia/bootstrapper@^0.13.1",
-      "aurelia-framework": "github:aurelia/framework@^0.12.0",
-      "aurelia-http-client": "github:aurelia/http-client@^0.9.1",
-      "aurelia-router": "github:aurelia/router@^0.9.0",
-      "aurelia-validation": "github:aurelia/validation@^0.2.4",
+      "aurelia-bootstrapper": "github:aurelia/bootstrapper@^0.18.0",
+      "aurelia-framework": "github:aurelia/framework@^0.17.0",
+      "aurelia-http-client": "github:aurelia/http-client@^0.12.0",
+      "aurelia-router": "github:aurelia/router@^0.13.0",
+      "aurelia-validation": "github:aurelia/validation@^0.4.0",
       "bootstrap": "github:twbs/bootstrap@^3.3.4",
-      "core-js": "npm:core-js@^0.9.16",
       "font-awesome": "npm:font-awesome@^4.3.0"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.5.3",
       "babel-runtime": "npm:babel-runtime@^5.5.3",
-      "traceur": "github:jmcriffey/bower-traceur@0.0.87",
-      "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.87"
+      "core-js": "npm:core-js@^1.2.1"
     }
   },
   "devDependencies": {
