--- a/src/AureliaMovies/project.json
+++ b/src/AureliaMovies/project.json
@@ -1,21 +1,20 @@
-﻿{
+{
   "webroot": "wwwroot",
   "version": "1.0.0-*",
   "dependencies": {
-    "Microsoft.AspNet.Server.IIS": "1.0.0-beta7",
-    "Microsoft.AspNet.Mvc": "6.0.0-beta7",
-    "Microsoft.AspNet.StaticFiles": "1.0.0-beta7",
-    "EntityFramework.SqlServer": "7.0.0-beta7",
-    "EntityFramework.Commands": "7.0.0-beta7",
-    "Microsoft.AspNet.Diagnostics": "1.0.0-beta7",
-    "Microsoft.Framework.Configuration.Json": "1.0.0-beta7",
-     "Microsoft.Framework.Configuration.Abstractions": "1.0.0-beta7"
+    "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
+    "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
+    "EntityFramework.MicrosoftSqlServer": "7.0.0-rc1-final",
+    "EntityFramework.Commands": "7.0.0-rc1-final",
+    "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
+    "Microsoft.AspNet.Diagnostics":  "1.0.0-rc1-final"
   },
   "frameworks": {
     "dnx451": { },
     "dnxcore50": { }
   },
   "commands": {
+    "web": "Microsoft.AspNet.Server.Kestrel",
     "ef": "EntityFramework.Commands"
   },
   "publishExclude": [
@@ -29,8 +28,5 @@
     "wwwroot",
     "node_modules",
     "bower_components"
-  ],
-  "scripts": {
-   
-  }
+  ]
 }
