--- a/src/AureliaMovies/package.json
+++ b/src/AureliaMovies/package.json
@@ -5,11 +5,11 @@
       "lib": "."
     },
     "dependencies": {
-      "aurelia-bootstrapper": "github:aurelia/bootstrapper@^0.18.0",
-      "aurelia-framework": "github:aurelia/framework@^0.17.0",
-      "aurelia-http-client": "github:aurelia/http-client@^0.12.0",
-      "aurelia-router": "github:aurelia/router@^0.13.0",
-      "aurelia-validation": "github:aurelia/validation@^0.4.0",
+      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.0.2",
+      "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.0.8",
+      "aurelia-http-client": "npm:aurelia-http-client@^1.0.0-beta.1.0.1",
+      "aurelia-router": "npm:aurelia-router@^1.0.0-beta.1.0.1",
+      "aurelia-validation": "npm:aurelia-validation@^0.6.0",
       "bootstrap": "github:twbs/bootstrap@^3.3.4",
       "font-awesome": "npm:font-awesome@^4.3.0"
     },
@@ -20,7 +20,6 @@
     }
   },
   "devDependencies": {
-    "aurelia-cli": "^0.2.0",
     "gulp": "^3.9.0",
     "gulp-exec": "^2.1.1",
     "gulp-shell": "^0.4.2",
