--- a/src/AureliaMovies/package.json
+++ b/src/AureliaMovies/package.json
@@ -11,7 +11,8 @@
       "aurelia-router": "npm:aurelia-router@^1.0.0-beta.1.1.1",
       "aurelia-validation": "npm:aurelia-validation@^0.6.2",
       "bootstrap": "github:twbs/bootstrap@^3.3.4",
-      "font-awesome": "npm:font-awesome@^4.3.0"
+      "font-awesome": "npm:font-awesome@^4.3.0",
+      "text": "github:systemjs/plugin-text@^0.0.7"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.5.3",
@@ -20,10 +21,8 @@
     }
   },
   "devDependencies": {
+    "del": "^2.2.0",
     "gulp": "^3.9.0",
-    "gulp-exec": "^2.1.1",
-    "gulp-shell": "^0.4.2",
-    "gulp-uglify": "^1.2.0",
     "gulp-watch": "^4.2.4"
   }
 }
